[chore] probably clashes with jekyll

--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@ div.display {
     </style>
   </head>
   <body>
-    <script type="text/javascript" src="_build/main.js"></script>
+    <script type="text/javascript" src="build/main.js"></script>
   </body>
 </html>
